chore: minor fix

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -98,6 +98,7 @@
                            class="input"
                            type="text"
                            name="username"
+                           tabindex="1"
                            placeholder="Nhập mã số sinh viên"
                            required
                            autofocus>
@@ -112,6 +113,7 @@
                            class="input"
                            type="password"
                            name="password"
+                           tabindex="2"
                            placeholder="Nhập mật khẩu"
                            required>
                 </div>
@@ -123,7 +125,7 @@
                     </label>
                 </div>
 
-                <button type="submit" class="primary-btn">
+                <button type="submit" class="primary-btn" tabindex="3">
                     <span class="primary-btn-icon">→</span>
                     <span>Đăng nhập</span>
                 </button>
